--- a/styles.css
+++ b/styles.css
@@ -150,10 +150,10 @@
      font-weight: bold;
  }
 
- @media (max-width:860px) {
+@media only screen and (max-width:800px) {
      body {
          background-image: url(./Assets/images/bg-pattern-bottom.svg), url(./Assets/images/bg-pattern-top.svg);
-         background-position: 600px 450px, -600px -450px;
+         background-position: 400px 450px, -600px -450px;
          background-repeat: no-repeat;
          background-color: var(--Dark-cyan);
      }
