--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
 
  body {
      background-image:  url(./Assets/images/bg-pattern-top.svg),url(./Assets/images/bg-pattern-bottom.svg);
-      background-position: left top, right bottom;
+      background-position: top left, bottom right;
      background-repeat: no-repeat;
      background-color: var(--Dark-cyan);
  }
