--- a/styles.css
+++ b/styles.css
@@ -149,5 +149,13 @@
      letter-spacing: 0.1rem;
      font-weight: bold;
  }
+@media only screen and (max-width:800px) {
+     body {
+         background-image: url(./Assets/images/bg-pattern-bottom.svg), url(./Assets/images/bg-pattern-top.svg);
+         background-position: top left , bottom right;
+         background-repeat: no-repeat;
+         background-color: var(--Dark-cyan);
+     }
+ }
 
 
